--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 		<p>TODO</p>
 		<p><strong>My program is currently in testing mode</strong> while Google is reviewing it. This means that if you want to use it, I'll have to add you to a whitelist first. Write me an email to <a href="mailto:dislike_count@gmx.net"><code>dislike_count@gmx.net</code></a>, and <em>please make sure</em> to include the email address that is tied to the Google account that is tied to your YouTube channel.</p>
 		<p>To add your channel to my program's watchlist, click the button below:</p>
-		<p class="centered_container"><a class="button" href="/authorize">add your channel</a></p>
+		<p class="centered_container"><a class="button" href="/dislike_count/authorize">add your channel</a></p>
 		<p>You'll be asked if you want to allow my program to "manage your YouTube channel". Unfortunately, I can't ask for permission in a more fine-grained way. I assure you that the only read action my program performs is getting a list of all your videos and their dislike counts, and the only write action is editing your videos' descriptions. I've published my source code <a href="https://github.com/PhoenixClank/dislike_count">on GitHub</a>, so if you can read Python, you can convince yourself.</p>
 		<p>If you don't trust that my server is actually running this code, you can rent your own server and register your own application to Google and just use my code.</p>
 		<div id="privacy_policy">This site uses a cookie to prevent a malicious exploit. You cannot opt out. No data is collected.</div>
